--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -6,17 +6,17 @@ authors:
 homepage: https://github.com/hurshi/dio-http-cache
 
 environment:
-  sdk: ">=2.1.0 <3.0.0"
+  sdk: '>=2.12.0 <3.0.0'
 
 dependencies:
   flutter:
     sdk: flutter
-  quiver: ^2.0.3
-  json_serializable: ^3.0.0
-  json_annotation: ^3.0.0
+  quiver: ^3.0.0
+  json_serializable: ^4.1.0
+  json_annotation: ^4.0.1
   dio: ^4.0.0-prev3
   sqflite: ^2.0.0+3
-  path: ^1.6.2
+  path: ^1.8.0
   crypto: ^3.0.0
 
 dev_dependencies:
